# gis_kaartdijin_boodja

./: .gitignore  Dockerfile  README.md  azure-pipelines.yml  cron  docker-compose.yml  docker_repo_name  gunicorn.ini  manage.py  mypy.ini  pyproject.toml  python-cron  requirements.txt  startup.sh
.devcontainer/: devcontainer.json
dockerdev/: Dockerfile
docs/: backend.md  fix_duplicate_layer_submissions.md  gis_tmp_cleanup_plan.md  plan_gis_tmp_dir_cleanup_phase2.md
geoserver_script/: user_group_role_files.py
govapp/: __init__.py  asgi.py  commands.py  context_processors.py  default_data_manager.py  emails.py  forms.py  index.html  middleware.py  models.py  settings.py  urls.py  views.py  wsgi.py
govapp/apps/: __init__.py
govapp/apps/accounts/: __init__.py  apps.py  cron.py  filters.py  permissions.py  reversion.py  serializers.py  signals.py  urls.py  utils.py  views.py
govapp/apps/catalogue/: __init__.py  absorber.py  admin.py  apps.py  cron.py  directory_absorber.py  directory_notifications.py  directory_scanner.py  emails.py  filters.py  mixins.py  notifications.py  permissions.py  postgres_scanner.py  reversion.py  scanner.py  seed.py  sharepoint.py  sharepoint_absorber.py  sharepoint_scanner.py  urls.py  utils.py  validators.py  views.py  webhooks.py
govapp/apps/emails/: __init__.py  apps.py  emails.py
govapp/apps/logs/: __init__.py  admin.py  apps.py  mixins.py  models.py  serializers.py  urls.py  utils.py  views.py
govapp/apps/publisher/: __init__.py  admin.py  apps.py  cron.py  emails.py  filters.py  geoserver_manager.py  geoserver_publisher.py  geoserver_queue_manager.py  models.py  notifications.py  permissions.py  urls.py  urls_geoserver_manager.py  views.py  views_geoserver_manager.py
govapp/apps/swagger/: __init__.py  apps.py  urls.py
govapp/common/: __init__.py  azure.py  local_storage.py  mixins.py  sharepoint.py  utils.py
govapp/frontend/: .env  .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
govapp/frontend/src/: App.vue  main.ts  vite-env.d.ts
govapp/frontend/static/: index.html
govapp/gis/: __init__.py  compression.py  conversions.py  geoserver.py  utils.py
govapp/gis/readers/: __init__.py  base.py  compression.py  default.sld  (+2 more)
govapp/templatetags/: custom_filters.py  users.py
tests/: __init__.py  conftest.py  settings.py  utils.py
tests/factories/: __init__.py
tests/test_gis/: test_conversions.py  test_formats.py  test_geoserver.py
tests/test_server/: test_asgi.py  test_middleware.py  test_urls.py  test_wsgi.py
windows_geoserver_script/: example_config_ini_for_windows.txt  example_env_for_geoserver.txt  fetch_and_store_files.py  file_sync.py  file_sync_for_geoserver.py  file_sync_for_windows.py  utils.py
windows_script/: cddp.py  config.ini  file_sync_for_windows.py
(+513 files in other folders)
